# relic

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
docs/: intro.md
docs/design/: lang.md  merging.md  performance.md
docs/lang/: dictionary-getters.md  functions.md  intro.md  literals.md
relic/: __init__.py  __main__.py  disk.py  experiments.py  json.py  plotting.py  projects.py  types.py
relic/cli/: __init__.py  cat.py  delete.py  export.py  ls.py  merge.py  modify.py  plot.py  versions.py
relic/cli/lib/: logging.py  parallel.py  shared.py
relic/cli/lib/lang/: __init__.py  ast.py  lexing.py  parsing.py
requirements/: dev.txt  relic.txt  typing.txt
scripts/: migrate-0.1.0-to-0.2.0.py
tests/: test_cli_delete.py  test_cli_lang.py  test_cli_lang_ast.py  test_cli_lang_lexing.py  test_cli_lang_parsing.py  test_cli_ls.py  test_cli_merge.py  test_cli_shared.py  test_experiments.py
